--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
